# facilitator-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: file_process.py  gemini_process.py  main.py  models.py
app/src/: file_process.py  gemini_process.py  logging_config.py  models.py
example/: agenda-bp-one-carieer.json  agenda.json
